# py-ziwei

./: API_DOC.md  README.md  pyproject.toml
app/: main.py
app/api/: routes.py  ui_html.py
app/astro/: __init__.py  analyzer.py  astro.py  formatter.py  horoscope.py  palace.py
app/core/: __init__.py  calendar_utils.py  constants.py  types.py  utils.py
app/star/: __init__.py  adjective_star.py  decorative_star.py  horoscope_star.py  location.py  major_star.py  minor_star.py
app/static/: index.html  script.js  style.css
public/: index.html
py_ziwei.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: generate_report.py  test_report.py
