[project]
name = "py-ziwei"
version = "0.1.0"
description = "紫微斗数排盘后端 - Python port of iztro"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "lunar-python>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
